--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,20 +2,21 @@ name: test
 
 on:
   push:
-    - "*"
+    branches:
+      - '*'
 
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.8
-    
-    - name: Install dependencies
-      run: pip install -r requirements.txt
+      - uses: actions/checkout@v1
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+      
+      - name: Install dependencies
+        run: pip install -r requirements.txt
 
-    - name: Test usage
-      run: python -c "import from PLS_pytorch import PLS_pytorch; network = PLS_pytorch()"
+      - name: Test usage
+        run: python -c "from PLS_pytorch import PLS_pytorch; network = PLS_pytorch()"
